--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "docusaurus-snapshotVersion",
-	"descriotion": "A workaround to do snapshot type versioningin Docusaurus 1.x.x",
+	"name": "docusaurus-snapshot-version",
+	"descriotion": "A workaround to do snapshot type versioning in Docusaurus 1.x.x",
 	"version": "0.0.1",
 	"scripts": {
 		"test": "mocha test/*"
 	},
 	"main": "./lib/createVersion.js",
 	"bin": {
-		"docusaurus-snapshotVersion": "./src/bin/snapshotCLI.js"
+		"docusaurus-snapshot-version": "./src/bin/snapshotCLI.js"
 	},
 	"devDependencies": {
 		"chai": "^4.2.0",
-		"eslint": "^5.15.3",
-		"eslint-plugin-mocha": "^5.3.0",
-		"mocha": "^6.0.2",
-		"mock-fs": "^4.8.0",
-		"sinon": "^7.3.1"
+		"eslint": "^7.7.0",
+		"eslint-plugin-mocha": "^8.0.0",
+		"mocha": "^8.1.1",
+		"mock-fs": "^4.12.0",
+		"sinon": "^9.0.3"
 	},
 	"dependencies": {
-		"commander": "^2.19.0",
-		"fs-extra": "^7.0.1",
-		"glob": "^7.1.3",
-		"shelljs": "^0.8.3"
-	}
+		"commander": "^6.0.0",
+		"fs-extra": "^9.0.1",
+		"glob": "^7.1.6",
+		"shelljs": "^0.8.4"
+	},
+	"license": "GPL-3.0"
 }
